--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <script src="scripts/app.js" defer></script>
 </head>
 <body>
-    
+    <div id="root">
+    <img class="logo" src="images/logo.png" alt="This is the logo.">
+    <div id="table">
+        <div class="row">
+            <div id="work_it" class="column"><p>Work it</p></div>
+            <div id="make_it" class="column"><p>Make it</p></div>
+            <div id="do_it" class="column"><p>Do it</p></div>
+            <div id="makes_us" class="column"><p>Makes us</p></div>
+        </div>
+        <div class="row">
+            <div id="harder" class="column"><p>Harder</p></div>
+            <div id="better" class="column"><p>Better</p></div>
+            <div id="faster" class="column"><p>Faster</p></div>
+            <div id="stronger" class="column"><p>Stronger</p></div>
+        </div>
+        <div class="row">
+            <div id="more_than" class="column"><p>More Than</p></div>
+            <div id="hour" class="column"><p>Hour</p></div>
+            <div id="our" class="column"><p>Our</p></div>
+            <div id="never" class="column"><p>Never</p></div>
+        </div>
+        <div class="row">
+            <div id="ever" class="column"><p>Ever</p></div>
+            <div id="after" class="column"><p>After</p></div>
+            <div id="work_is" class="column"><p>Work is</p></div>
+            <div id="over" class="column"><p>Over</p></div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
